--- a/songeek-project/templates/songeek/index.html
+++ b/songeek-project/templates/songeek/index.html
@@ -13,9 +13,11 @@
 <header class="navbar">
     <div class="nav-left">
         <a href="{% url 'songeek:index' %}">
-            <img src="{% static 'images/logo.png' %}" alt="Songeek Logo" class="logo">
-        </a>
-    </div>
+            <div class="nav-home">
+                <img src="{% static 'website_images/headphones.png' %}" alt="Songeek Logo" class="logo">
+                </a>
+            </div>
+        </div>
 
     <div class="nav-center">
         <form action="{% url 'songeek:search_results' %}" method="GET">
@@ -108,13 +110,17 @@
         </div>
 </div>
 
-<ul>
-    <li><a href="{% url 'songeek:new_playlist' %}">Create a new Playlist</a></li>
-    <li><a href="{% url 'songeek:profile' %}">Profile</a></li>
-</ul>
-
-<!-- footer -->
-<div class="footer">
-    <img src="{% static 'images/footer-icon.png' %}" alt="Footer">
-</div>
+<footer>
+    <div class="footer-container">
+        <div class="footer-nav">
+            <ul>
+                <li><a href="{% url 'songeek:new_playlist' %}">Create a new Playlist</a></li>
+                <li><a href="{% url 'songeek:profile' %}">Profile</a></li>
+            </ul>
+        </div>
+        <div class="footer-icon">
+            <img src="{% static 'website_images/headphones_footer.png' %}" alt="Footer">
+        </div>
+    </div>
+</footer>
 {% endblock %}
