--- a/songeek-project/templates/songeek/register.html
+++ b/songeek-project/templates/songeek/register.html
@@ -11,7 +11,7 @@
 <div class="base-box">
     <div class="logo">
         <a href="{% url 'songeek:index' %}">
-            <img src="{% static 'images/headphones.png' %}" class="logoimg" alt="Headphones">
+            <img src="{% static 'website_images/headphones.png' %}" class="logoimg" alt="Headphones">
         </a>
     </div>
 
@@ -44,8 +44,4 @@
             {% endif %}
         </div>
     </div>
-
-<div class="footer">
-    <img src="{% static 'images/headphones_footer.png' %}" alt="Footer">
-</div>
 {% endblock %}
