--- a/songeek-project/static/css/styles.css
+++ b/songeek-project/static/css/styles.css
@@ -2,16 +2,15 @@
 
 /* general CSS */
 
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #A9A9A9;
+html, body {
+    height: 100%;
+    display: block;
+    padding: 0;
     flex-direction: column;
-    color: white;
-    padding-top: 70px;
-    min-height: 100vh;
+    background-color: #A9A9A9;
     font-family: 'Lucida Sans', sans-serif;
+    margin: 0;
+    overflow-x: hidden;
 }
 
 /* navbar */
@@ -174,16 +173,17 @@ body {
 }
 
 /* login and register pages */
+
 .base-page {
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: linear-gradient(135deg, #1e1e1e, #383838);
     padding: 20px;
     box-sizing: border-box;
-    margin-top: 40px;
 }
 
 .base-box {
@@ -191,9 +191,7 @@ body {
     padding: 40px;
     border-radius: 20px;
     text-align: center;
-    width: 100%;
-    max-width: 700px;
-    margin-top: 45px;
+    width: 700px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.8);
     color: white;
     display: flex;
@@ -207,6 +205,13 @@ body {
     gap: 15px;
     margin: 0;
     width: 450px;
+}
+
+.logo img {
+    /*filter: invert(100%) sepia(100%) saturate(5000%) hue-rotate(0deg);
+    mix-blend-mode: lighten;*/
+    width: 150px;
+    height: auto;
 }
 
 .base-box label {
@@ -255,12 +260,68 @@ body {
 }
 
 /* footer -- see how to make one */
-.footer {
+footer {
+    background-color: red;
+    padding: 20px 0;
+    position: relative;
+    width: 100%;
+    bottom: 0;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.footer-icon {
     position: absolute;
-    bottom: 20px;
+    bottom: 10px;
     right: 20px;
 }
 
-.footer img {
+.footer-icon img {
     width: 50px;
+    height: auto;
+}
+
+.footer-nav {
+    margin: 30px 0;
+}
+
+.footer-nav ul {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer-nav ul li {
+    margin: 0 15px;
+}
+
+.footer-nav ul li a{
+    color: white;
+    margin: 20px;
+    text-decoration: none;
+    font-size: 24px;
+    opacity: 0.7;
+}
+
+.footer-nav ul li a:hover{
+    opacity: 1;
+}
+
+@media (max-width: 700px) {
+    .footer-nav ul {
+        flex-direction: column;
+    }
+
+    .footer-nav ul li {
+        width: 100%;
+        text-align: center;
+        margin: 20px;
+    }
 }
