fixing the homepage

--- a/songeek-project/static/css/styles.css
+++ b/songeek-project/static/css/styles.css
@@ -33,11 +33,11 @@ html, body {
     gap: 10px;
 }
 
-.nav-home logo {
+/*.nav-home logo {
     width: 30px;
     height: 30px;
     filter: invert(1);
-}
+}*/
 
 /* search bar */
 
