--- a/songeek-project/templates/songeek/index.html
+++ b/songeek-project/templates/songeek/index.html
@@ -13,10 +13,10 @@
 <header class="navbar">
     <div class="nav-left">
         <a href="{% url 'songeek:index' %}">
-            <div class="nav-home">
+            <!--<div class="nav-home">
                 <img src="{% static 'website_images/headphones.png' %}" alt="Songeek Logo" class="logo">
                 </a>
-            </div>
+            </div>-->
         </div>
 
     <div class="nav-center">
