--- a/songeek-project/templates/songeek/playlist.html
+++ b/songeek-project/templates/songeek/playlist.html
@@ -17,7 +17,7 @@
         {% if songs %}
         <ul>
             {% for song in songs %}
-                <li>{{ song.title }} - {{ song.length}} - {{ song.album.artist }}</li>
+                <li><a href="{% url 'songeek:show_song' song.id %}">{{ song.title }}</a> - {{ song.length}} - {{ song.album.artist }}</li>
             {% endfor %}
         </ul>
         {% else %}
