--- a/songeek-project/templates/songeek/search_results.html
+++ b/songeek-project/templates/songeek/search_results.html
@@ -17,7 +17,7 @@
             <h3>Songs</h3>
             <ul>
                 {% for song in songs %}
-                    <li>{{ song.title }}</li>
+                    <li><a href="{% url 'songeek:show_song' song.id %}">{{ song.title }}</a></li>
                 {% endfor %}
             </ul>
         {% endif %}
