--- a/songeek-project/templates/songeek/add_album.html
+++ b/songeek-project/templates/songeek/add_album.html
@@ -6,19 +6,25 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1>Create a new Album</h1>
-    <div>
-        <form id="album_form" method="post" action="{% url 'songeek:add_album' %}" enctype="multipart/form-data">
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-                {{ hidden }}
-            {% endfor %}
-            {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
-            {% endfor %}
-            <input type="submit" name="submit" value="Create New Album" />
-        </form>
+<div class="base-page">
+    <div class="base-box">
+        <div class="title-container">
+            <h1>Create a new Album</h1>
+        </div>
+        <div>
+            <form id="album_form" method="post" action="{% url 'songeek:add_album' %}" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for hidden in form.hidden_fields %}
+                    {{ hidden }}
+                {% endfor %}
+                {% for field in form.visible_fields %}
+                    {{ field.errors }}
+                    {{ field.help_text }}
+                    {{ field }}
+                {% endfor %}
+                <button type="submit">Create New Album</button>
+            </form>
+        </div>
     </div>
+</div>
 {% endblock %}
