--- a/songeek-project/static/css/styles.css
+++ b/songeek-project/static/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Trebuchet MS', sans-serif;
     background-color: #121212; 
@@ -36,7 +35,6 @@ a {
     border-radius: 5px;
 }
 
-
 .search-form {
     text-align: center;
     margin-top: 20px;
@@ -70,12 +68,10 @@ a {
     background-color: #666;
 }
 
-
 .content {
     width: 80%;
     margin: 20px auto;
 }
-
 
 .footer-links {
     text-align: center;
@@ -90,7 +86,6 @@ a {
 .footer-link:hover {
     color: #bbb;
 }
-
 
 button {
     width: 100%;
@@ -107,7 +102,6 @@ button:hover {
     background-color: #333;
 }
 
-/* Login/Signup Form Styling */
 .login-container {
     display: flex;
     justify-content: center;
@@ -156,7 +150,6 @@ input:hover {
     background: #333;
 }
 
-/* Footer */
 .footer {
     position: absolute;
     bottom: 20px;
@@ -168,7 +161,6 @@ input:hover {
     height: auto;
 }
 
-
 .top-songs-list {
     list-style-type: none;  
     padding-left: 0;
@@ -179,32 +171,29 @@ input:hover {
     align-items: center;  
     font-size: 18px;
     margin-bottom: 10px;
+    cursor: pointer;
 }
-
 
 .top-songs-list li span {
     font-weight: bold;
     margin-right: 10px;
 }
 
-
 .top-songs-list li img.song-image {
-    width: 10px;  
-    height: 10px; 
+    width: 20px;  
+    height: 20px; 
     margin-left: 10px;  
     border-radius: 50%; 
     vertical-align: middle;  
+    cursor: pointer;
 }
-
 
 .song-box-container {
     display: flex;
-    flex-direction: row; 
-    gap: 20px;  
-    margin-top: 20px;
-    overflow-x: auto; 
+    gap: 10px;
+    overflow-x: auto;
+    padding-bottom: 10px;
 }
-
 
 .song-box {
     width: 120px;
@@ -213,12 +202,14 @@ input:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
+    border-radius: 12px;
+    overflow: hidden;
 }
 
 .song-box img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; 
-    border-radius: 10px;
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 12px;
+    cursor: pointer;
 }
