--- a/songeek-project/static/css/styles.css
+++ b/songeek-project/static/css/styles.css
@@ -94,6 +94,12 @@ html, body {
 
 /* top songs */
 
+.top-songs,
+.visualizer,
+.song-sections {
+    width: 100%;
+}
+
 .top-songs h2 {
     font-size: 24px;
     margin-bottom: 10px;
@@ -108,9 +114,10 @@ html, body {
     display: flex;
     align-items: center;
     padding: 10px;
-    background: #B0B0B0;
+    background: #383838;
     border-radius: 10px;
-    margin-bottom: 5px;
+    width: 100%;
+    max-width: 450px;
 }
 
 .song-item span {
@@ -136,17 +143,20 @@ html, body {
 }
 
 /* playlists and discover section */
-.song-sections {
+.song-sections .section {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-.section {
+.song-sections .section {
+    width: 100%;
+    max-width: 450px;
     background: #B0B0B0;
     padding: 15px;
     border-radius: 10px;
     margin-top: 20px;
+    text-align: center;
 }
 
 .image-cards {
@@ -166,7 +176,7 @@ html, body {
     flex: 1;
 }
 
-.card img {
+.image-cards .card img {
     width: 100px;
     height: 100px;
     border-radius: 10px;
@@ -199,6 +209,7 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 80px auto
 }
 
 .base-box form {
