--- a/songeek-project/templates/songeek/add_album.html
+++ b/songeek-project/templates/songeek/add_album.html
@@ -20,7 +20,15 @@
                 {% for field in form.visible_fields %}
                     {{ field.errors }}
                     {{ field.help_text }}
-                    {{ field }}
+
+                    {% if field.field.widget.input_type == "file" %}
+                        <div class="file-upload-wrapper">
+                            <input type="file" id="{{ field.id_for_label }}" name="{{ field.html_name }}">
+                            <label for="{{ field.id_for_label }}" class="file-upload-label">Upload Album Cover</label>
+                        </div>
+                    {% else %}
+                        {{ field }}
+                    {% endif %}
                 {% endfor %}
                 <button type="submit">Create New Album</button>
             </form>
