--- a/songeek-project/static/css/styles.css
+++ b/songeek-project/static/css/styles.css
@@ -3,7 +3,7 @@
 /* general CSS */
 
 html, body {
-    height: 100%;
+    /* height: 100%; */
     display: block;
     padding: 0;
     flex-direction: column;
