--- a/songeek-project/templates/songeek/register.html
+++ b/songeek-project/templates/songeek/register.html
@@ -34,6 +34,9 @@
                     <label for="id_password">Password</label>
                     {{ user_form.password }}
 
+                    <label for="id_picture">Profile Picture</label>
+                    {{profile_form.picture}}
+
                 <button type="submit">Sign Up</button>
             </form>
 
