--- a/songeek-project/templates/songeek/album_list.html
+++ b/songeek-project/templates/songeek/album_list.html
@@ -1,6 +1,8 @@
 {% extends 'songeek/base.html' %}
 {% load staticfiles %}
 
+{% block body_class %}navbar nav-search base-page base-box index-page{% endblock %}
+
 {% block body_block %}
 <ul>
     {% for album in albums %}
