--- a/songeek-project/static/css/styles.css
+++ b/songeek-project/static/css/styles.css
@@ -1,5 +1,3 @@
-/* ask about admin access */
-
 /* general CSS */
 
 html, body {
@@ -11,11 +9,12 @@ html, body {
     font-family: 'Lucida Sans', sans-serif;
     margin: 0;
     overflow-x: hidden;
+    color: #FFFFFF; /* New font color */
 }
 
 /* navbar */
 .navbar {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     height: 60px;
@@ -25,7 +24,7 @@ html, body {
     background: #A9A9A9;
     padding: 0px 20px;
     width: 100%;
-    z-index: 100;
+    z-index: 1000;
 }
 
 .nav-right {
@@ -38,7 +37,6 @@ html, body {
     height: 30px;
     filter: invert(1);
 }
-
 
 /* file input */
 
